--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <!-- Link Fontes -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
@@ -23,11 +23,19 @@
         <img src="./assets/logo-header.svg" alt="Copa - Calendário" />
       </header>
 
-      <main id="cards">
-      </main>
+      <main id="cards"></main>
+
+      <footer>
+        Desenvolvido por
+        <a href="https://github.com/jvitor22" target="_blank"
+          >João Vitor de Assumpção</a
+        >
+        durante o NLW - Copa da
+        <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>.
+      </footer>
     </div>
 
     <!-- Script -->
-    <script src="main.js"></script> 
+    <script src="main.js"></script>
   </body>
 </html>
