--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="blue">
     <div id="app">
       <header>
-        <img src="./assets/logo-header.svg" alt="Copa - Calendário" />
+        <img src="./assets/2022_FIFA_World_Cup.svg" alt="Copa - Calendário" />
       </header>
 
       <main id="cards"></main>
